fixed js and actions alignment

--- a/css/apps/files.scss
+++ b/css/apps/files.scss
@@ -100,6 +100,7 @@
 				}
 	
 				.columntitle.name {
+					display: inline-block;
 					margin-left: 0px;
 					padding-bottom: 0.75rem;
 					padding-top: 0.75rem;
@@ -113,6 +114,7 @@
 	}
 
 	.selectedActions {
+		float: right;
 
 		&> a.actions-selected {
 			display: none;
@@ -123,7 +125,7 @@
 			border-radius: 0;
 			display: inline-block !important;
 			filter: unset;
-			margin: 0;
+			margin: 0 1rem 0 0;
 			padding: 0;
 			position: unset;
 			transform: unset;
